# actix-juniper-example

./: .gitignore  README.md  build_all.sh  run_release.sh
backend/: Cargo.toml  example.env
backend/src/: main.rs
backend/src/handlers/: graphql.rs  mod.rs
backend/src/repositories/: post.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/Form/: _Form.tsx
