[package]
name = "actix-blog-app"
version = "0.1.0"
authors = ["Julio Daniel Reyes <nemesiscodex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-files = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.5"
tokio-pg-mapper-derive = "0.1.5"
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4", "with-uuid-0_8"] }
deadpool-postgres = "0.5.6"
slog = "2.7.0"
slog-term = "2.6.0"
slog-async = "2.6.0"
slog-envlogger = "2.2.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
futures = { version = "0.3.12", features = ["compat"] }
#juniper = { git = "https://github.com/graphql-rust/juniper.git" }
juniper = "0.15.3"

argonautica = { version = "0.2.0", features = ["simd"] }
dataloader = { version = "0.12", default-features = false, features = ["runtime-tokio"]}
async-trait = "0.1.30"

[dev-dependencies]
serde_json = "1.0.48"
lazy_static = "1.4.0"